--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,15 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permisssion.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permisssion.INTERNET"></uses-permission>
+    <uses-permission android:name="android.permisssion.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permisssion.REQUEST_LOCATION_PERMISSION" />
+    <uses-permission android:name="android.permisssion.ACCESS_COARSE_LOCATION" />
+
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -13,15 +22,28 @@
         android:theme="@style/Theme.MonSyndic"
         tools:targetApi="31">
         <activity
-            android:name=".Acceuil"
+            android:name=".fragements.Document"
             android:exported="false" />
+        <activity
+            android:name=".MainActivity"
+            android:exported="false" />
+                <activity
+                    android:name=".Acceuil"
+                    android:exported="true">
+                    <intent-filter>
+                        <action android:name="android.intent.action.MAIN" />
+
+                        <category android:name="android.intent.category.LAUNCHER" />
+                    </intent-filter>
+                </activity>
+
+
         <activity
             android:name=".Situation"
             android:exported="false" />
         <activity
             android:name=".Reclamation"
             android:exported="false" />
-
         <activity
             android:name=".Bien"
             android:exported="false" />
@@ -35,21 +57,24 @@
             android:name=".SignUp"
             android:exported="false" />
         <activity
-            android:name=".Login"
+            android:name=".Maps_Activity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+            android:name=".Login"
+            android:exported="false" />
+<!--        <activity-->
+<!--            android:name=".MainActivity"-->
+<!--            android:exported="true">-->
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
+<!--        </activity>-->
 
         <meta-data
-            android:name="preloaded_fonts"
-            android:resource="@array/preloaded_fonts" />
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyD99zYOjUIxufef2o3JUkitUbFSDGfFWbc" />
     </application>
 
 </manifest>
